# cis5370-final-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  swat-eval.ipynb
results/diagrams/: .$pipeline.drawio.bkp  pipeline.drawio
